--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,16 @@
       <h1>
         <img src="img/logo-furieuse.svg" alt="" />
       </h1>
-      <nav>
-        <div class="button">
+      <nav class="nav-header">
+        <a href="https://www.dargaud.com" class="button button-regular">
           <p>Editeur</p>
-        </div>
-        <div class="button">
+        </a>
+        <a href="#storytelling" class="button button-big">
           <p>Commencer l’Aventure !</p>
-        </div>
-        <div class="button">
+        </a>
+        <a href="#shop" class="button button-regular">
           <p>Shop</p>
-        </div>
+        </a>
       </nav>
       <div class="title-background">
         <img src="img/titre/titre-plan_1.png" alt="" class="panel panel1" />
@@ -29,7 +29,7 @@
         <img src="img/titre/titre-plan_4.png" alt="" class="panel panel4" />
       </div>
     </header>
-    <div class="storytelling">
+    <div class="storytelling" id="storytelling">
       <div class="scene scene1">
         <img src="img/scene_1/scene_1-plan_1.png" alt="" class="panel panel1" />
         <img src="img/scene_1/scene_1-plan_2.png" alt="" class="panel panel2" />
@@ -90,6 +90,104 @@
         <img src="img/scene_9/scene_9-plan_4.png" alt="" class="panel panel4" />
         <img src="img/scene_9/scene_9-plan_5.png" alt="" class="panel panel5" />
       </div>
+    </div>
+    <div class="shop" id="shop">
+      <img src="img/mockup.webp" alt="" class="mockup" />
+      <div class="shop-info">
+        <img src="img/logo-furieuse.svg" alt="" class="logo-furieuse" />
+        <div class="shop-text">
+          <nav class="nav-shop">
+            <p class="shop-onglet shop-onglet-resume">résumé</p>
+            <p class="shop-onglet shop-onglet-createurs">créateurs</p>
+          </nav>
+          <p class="shop-paragraphe">
+            Après « Le Mystère du monde quantique » et « Sous Terre », Mathieu
+            Burniat revient avec « Furieuse », une pure fiction scénarisée par
+            Geoffroy Monde (« Poussière », « Comment réussir » et « De rien »).
+            Le roi Arthur, celui de la légende ? Un vieil ivrogne décrépit qui
+            passe ses journées vautré sur son trône. Sa gloire désormais bien
+            lointaine, il la doit à l'épée magique que Merlin lui a forgée pour
+            terrasser les hordes de démons venues envahir le royaume de
+            Pendragon. Devenue témoin de sa déchéance, l'arme enchantée s'ennuie
+            ferme tandis que la princesse Ysabelle fulmine car son débris de
+            père l'a promise en mariage à l'ignoble petit baron de Cumbre.
+            Toutes deux bien décidées à se trouver un meilleur destin, Ysa et
+            l'épée s'allient pour fuir le château et partir à la recherche de
+            Merlin et de Maxine, la grande soeur disparue. Mais le vaste monde
+            peut se montrer bien cruel pour une princesse qui n'a connu que la
+            vie de palais. Et les intentions de l'épée sont peut-être moins
+            nobles qu'il n'y paraît...
+          </p>
+          <p class="shop-paragraphe">
+            Furieuse est une bande dessinée créée par Geoffroy Monde au scénario
+            et Mathieu Burniat au dessin. Geoffroy Monde, auteur lyonnais, est
+            influencé par des figures comme Goossens et Gotlib. Il se fait
+            connaître dès 2007 en publiant des BD en ligne sur son blog, avant
+            de sortir plusieurs albums papier à partir de 2010. Après des succès
+            comme « De rien » et « Poussière », il écrit le scénario de Furieuse
+            en 2022. Mathieu Burniat, né à Bruxelles en 1984, est passionné par
+            les arts graphiques et la narration. Après des études en design, il
+            se lance dans la BD et publie sa première œuvre, Shrimp, en 2012. Il
+            se fait remarquer avec des récits alliant fiction et vulgarisation
+            scientifique, avant de collaborer avec Geoffroy Monde sur Furieuse,
+            une aventure fantastique pleine de rebondissements.
+          </p>
+        </div>
+        <a
+          href="https://www.dargaud.com/bd/furieuse-bda5430320"
+          class="button button-shop"
+        >
+          <p>Acheter le livre</p>
+        </a>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="footer-content">
+        <div class="dargaud">
+          <img src="img/logo-dargaud-blanc.png" alt="" class="logo-dargaud" />
+          <nav class="nav-dargaud">
+            <a
+              href="https://www.facebook.com/editions.dargaud"
+              class="dargaud-media"
+            >
+              <img src="img/facebook.svg" alt="" />
+            </a>
+            <a href="https://www.instagram.com/dargaud/" class="dargaud-media">
+              <img src="img/insta.svg" alt="" />
+            </a>
+            <a href="https://www.instagram.com/dargaud/" class="dargaud-media">
+              <img src="img/x.svg" alt="" />
+            </a>
+            <a
+              href="https://www.youtube.com/user/dargaud75"
+              class="dargaud-media"
+            >
+              <img src="img/youtube.svg" alt="" />
+            </a>
+          </nav>
+        </div>
+        <div class="newsletter">
+          <span class="newsletter-title">Newsletter</span>
+          <div class="newsletter-subscribe">
+            <div class="newsletter-label"></div>
+            <div class="button-newsletter">
+              <p>Je m’inscris !</p>
+            </div>
+          </div>
+        </div>
+        <div class="legal">
+          <a
+            href="https://www.dargaud.com/mentions-legales"
+            class="legal-mention"
+          >
+            Mentions légales
+          </a>
+          <a href="https://www.dargaud.com" class="legal-website">
+            dargaud.com
+          </a>
+        </div>
+      </div>
+      <p class="copyright">©Dargaud 2024 - tous droits réservés</p>
     </div>
     <script src="js/main.js" type="module"></script>
   </body>
