--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,17 @@
           <img src="img/logo-furieuse.svg" alt="" class="header-logo" />
         </h1>
         <nav class="nav-header">
-          <a href="https://www.dargaud.com" class="button button-regular">
+          <a
+            href="https://www.dargaud.com"
+            target="_blank"
+            class="button button-regular font-button"
+          >
             <p>Editeur</p>
           </a>
-          <a href="#storytelling" class="button button-big">
+          <a href="#storytelling" class="button button-big font-button-big">
             <p>Commencer l’Aventure !</p>
           </a>
-          <a href="#shop" class="button button-regular">
+          <a href="#shop" class="button button-regular font-button">
             <p>Shop</p>
           </a>
         </nav>
@@ -104,10 +108,12 @@
         <img src="img/logo-furieuse.svg" alt="" class="logo-furieuse" />
         <div class="shop-text">
           <nav class="nav-shop">
-            <p class="shop-onglet shop-onglet-resume">résumé</p>
-            <p class="shop-onglet shop-onglet-createurs">créateurs</p>
+            <p class="shop-onglet shop-onglet-resume font-link-on">résumé</p>
+            <p class="shop-onglet shop-onglet-createurs font-link-off">
+              créateurs
+            </p>
           </nav>
-          <p class="shop-paragraphe">
+          <p class="shop-paragraphe font-text">
             Après « Le Mystère du monde quantique » et « Sous Terre », Mathieu
             Burniat revient avec « Furieuse », une pure fiction scénarisée par
             Geoffroy Monde (« Poussière », « Comment réussir » et « De rien »).
@@ -125,7 +131,7 @@
             vie de palais. Et les intentions de l'épée sont peut-être moins
             nobles qu'il n'y paraît...
           </p>
-          <p class="shop-paragraphe">
+          <p class="shop-paragraphe font-text">
             Furieuse est une bande dessinée créée par Geoffroy Monde au scénario
             et Mathieu Burniat au dessin. Geoffroy Monde, auteur lyonnais, est
             influencé par des figures comme Goossens et Gotlib. Il se fait
@@ -142,7 +148,8 @@
         </div>
         <a
           href="https://www.dargaud.com/bd/furieuse-bda5430320"
-          class="button button-regular"
+          target="_blank"
+          class="button button-regular font-button"
         >
           <p>Acheter le livre</p>
         </a>
@@ -155,18 +162,28 @@
           <nav class="nav-dargaud">
             <a
               href="https://www.facebook.com/editions.dargaud"
+              target="_blank"
               class="dargaud-media"
             >
               <img src="img/facebook.svg" alt="" />
             </a>
-            <a href="https://www.instagram.com/dargaud/" class="dargaud-media">
+            <a
+              href="https://www.instagram.com/dargaud/"
+              target="_blank"
+              class="dargaud-media"
+            >
               <img src="img/insta.svg" alt="" />
             </a>
-            <a href="https://www.instagram.com/dargaud/" class="dargaud-media">
+            <a
+              href="https://www.instagram.com/dargaud/"
+              target="_blank"
+              class="dargaud-media"
+            >
               <img src="img/x.svg" alt="" />
             </a>
             <a
               href="https://www.youtube.com/user/dargaud75"
+              target="_blank"
               class="dargaud-media"
             >
               <img src="img/youtube.svg" alt="" />
@@ -174,10 +191,10 @@
           </nav>
         </div>
         <div class="newsletter">
-          <span class="newsletter-title">Newsletter</span>
+          <span class="newsletter-title font-newsletter-title">Newsletter</span>
           <div class="newsletter-subscribe">
             <div class="newsletter-label"></div>
-            <div class="button-newsletter">
+            <div class="button-newsletter font-button-newsletter">
               <p>Je m’inscris !</p>
             </div>
           </div>
@@ -185,16 +202,23 @@
         <div class="legal">
           <a
             href="https://www.dargaud.com/mentions-legales"
-            class="legal-mention"
+            target="_blank"
+            class="legal-mention font-text"
           >
             Mentions légales
           </a>
-          <a href="https://www.dargaud.com" class="legal-website">
+          <a
+            href="https://www.dargaud.com"
+            target="_blank"
+            class="legal-website font-text"
+          >
             dargaud.com
           </a>
         </div>
       </div>
-      <p class="copyright">©Dargaud 2024 - tous droits réservés</p>
+      <p class="copyright font-copyright">
+        ©Dargaud 2024 - tous droits réservés
+      </p>
     </div>
     <script src="js/main.js" type="module"></script>
   </body>
