--- a/src/index.html
+++ b/src/index.html
@@ -102,57 +102,61 @@
         <img src="img/scene_9/scene_9-plan_5.png" alt="" class="panel panel5" />
       </div>
     </div>
-    <div class="shop l-shop" id="shop">
-      <img src="img/mockup.webp" alt="" class="mockup" />
-      <div class="shop-info">
-        <img src="img/logo-furieuse.svg" alt="" class="logo-furieuse" />
-        <div class="shop-text">
-          <nav class="nav-shop">
-            <p class="shop-onglet shop-onglet-resume font-link-on">résumé</p>
-            <p class="shop-onglet shop-onglet-createurs font-link-off">
-              créateurs
+    <div class="l-shop" id="shop">
+      <img src="img/shop-background.jpg" alt="" class="shop-background" />
+      <div class="shop">
+        <img src="img/mockup.webp" alt="" class="shop-mockup" />
+        <div class="shop-info">
+          <img src="img/logo-furieuse.svg" alt="" class="shop-logo" />
+          <div class="shop-text">
+            <nav class="nav-shop">
+              <p class="shop-onglet shop-onglet-resume font-link-on">résumé</p>
+              <p class="shop-onglet shop-onglet-createurs font-link-off">
+                créateurs
+              </p>
+            </nav>
+            <p class="shop-paragraphe font-text">
+              Après « Le Mystère du monde quantique » et « Sous Terre », Mathieu
+              Burniat revient avec « Furieuse », une pure fiction scénarisée par
+              Geoffroy Monde (« Poussière », « Comment réussir » et « De rien
+              »). Le roi Arthur, celui de la légende ? Un vieil ivrogne décrépit
+              qui passe ses journées vautré sur son trône. Sa gloire désormais
+              bien lointaine, il la doit à l'épée magique que Merlin lui a
+              forgée pour terrasser les hordes de démons venues envahir le
+              royaume de Pendragon. Devenue témoin de sa déchéance, l'arme
+              enchantée s'ennuie ferme tandis que la princesse Ysabelle fulmine
+              car son débris de père l'a promise en mariage à l'ignoble petit
+              baron de Cumbre. Toutes deux bien décidées à se trouver un
+              meilleur destin, Ysa et l'épée s'allient pour fuir le château et
+              partir à la recherche de Merlin et de Maxine, la grande soeur
+              disparue. Mais le vaste monde peut se montrer bien cruel pour une
+              princesse qui n'a connu que la vie de palais. Et les intentions de
+              l'épée sont peut-être moins nobles qu'il n'y paraît...
             </p>
-          </nav>
-          <p class="shop-paragraphe font-text">
-            Après « Le Mystère du monde quantique » et « Sous Terre », Mathieu
-            Burniat revient avec « Furieuse », une pure fiction scénarisée par
-            Geoffroy Monde (« Poussière », « Comment réussir » et « De rien »).
-            Le roi Arthur, celui de la légende ? Un vieil ivrogne décrépit qui
-            passe ses journées vautré sur son trône. Sa gloire désormais bien
-            lointaine, il la doit à l'épée magique que Merlin lui a forgée pour
-            terrasser les hordes de démons venues envahir le royaume de
-            Pendragon. Devenue témoin de sa déchéance, l'arme enchantée s'ennuie
-            ferme tandis que la princesse Ysabelle fulmine car son débris de
-            père l'a promise en mariage à l'ignoble petit baron de Cumbre.
-            Toutes deux bien décidées à se trouver un meilleur destin, Ysa et
-            l'épée s'allient pour fuir le château et partir à la recherche de
-            Merlin et de Maxine, la grande soeur disparue. Mais le vaste monde
-            peut se montrer bien cruel pour une princesse qui n'a connu que la
-            vie de palais. Et les intentions de l'épée sont peut-être moins
-            nobles qu'il n'y paraît...
-          </p>
-          <p class="shop-paragraphe font-text">
-            Furieuse est une bande dessinée créée par Geoffroy Monde au scénario
-            et Mathieu Burniat au dessin. Geoffroy Monde, auteur lyonnais, est
-            influencé par des figures comme Goossens et Gotlib. Il se fait
-            connaître dès 2007 en publiant des BD en ligne sur son blog, avant
-            de sortir plusieurs albums papier à partir de 2010. Après des succès
-            comme « De rien » et « Poussière », il écrit le scénario de Furieuse
-            en 2022. Mathieu Burniat, né à Bruxelles en 1984, est passionné par
-            les arts graphiques et la narration. Après des études en design, il
-            se lance dans la BD et publie sa première œuvre, Shrimp, en 2012. Il
-            se fait remarquer avec des récits alliant fiction et vulgarisation
-            scientifique, avant de collaborer avec Geoffroy Monde sur Furieuse,
-            une aventure fantastique pleine de rebondissements.
-          </p>
+            <p class="shop-paragraphe shop-hide font-text">
+              Furieuse est une bande dessinée créée par Geoffroy Monde au
+              scénario et Mathieu Burniat au dessin. Geoffroy Monde, auteur
+              lyonnais, est influencé par des figures comme Goossens et Gotlib.
+              Il se fait connaître dès 2007 en publiant des BD en ligne sur son
+              blog, avant de sortir plusieurs albums papier à partir de 2010.
+              Après des succès comme « De rien » et « Poussière », il écrit le
+              scénario de Furieuse en 2022. Mathieu Burniat, né à Bruxelles en
+              1984, est passionné par les arts graphiques et la narration. Après
+              des études en design, il se lance dans la BD et publie sa première
+              œuvre, Shrimp, en 2012. Il se fait remarquer avec des récits
+              alliant fiction et vulgarisation scientifique, avant de collaborer
+              avec Geoffroy Monde sur Furieuse, une aventure fantastique pleine
+              de rebondissements.
+            </p>
+          </div>
+          <a
+            href="https://www.dargaud.com/bd/furieuse-bda5430320"
+            target="_blank"
+            class="button button-regular font-button"
+          >
+            <p>Acheter le livre</p>
+          </a>
         </div>
-        <a
-          href="https://www.dargaud.com/bd/furieuse-bda5430320"
-          target="_blank"
-          class="button button-regular font-button"
-        >
-          <p>Acheter le livre</p>
-        </a>
       </div>
     </div>
     <div class="footer">
