--- a/src/index.html
+++ b/src/index.html
@@ -161,8 +161,12 @@
     </div>
     <div class="footer">
       <div class="footer-content">
-        <div class="dargaud">
-          <img src="img/logo-dargaud-blanc.png" alt="" class="logo-dargaud" />
+        <div class="footer-dargaud">
+          <img
+            src="img/logo-dargaud-blanc.png"
+            alt=""
+            class="footer-logo-dargaud"
+          />
           <nav class="nav-dargaud">
             <a
               href="https://www.facebook.com/editions.dargaud"
@@ -194,16 +198,19 @@
             </a>
           </nav>
         </div>
-        <div class="newsletter">
+        <div class="footer-newsletter">
           <span class="newsletter-title font-newsletter-title">Newsletter</span>
-          <div class="newsletter-subscribe">
-            <div class="newsletter-label"></div>
+          <div class="footer-newsletter-subscribe">
+            <input type="email" 
+            placeholder="dargaud@gmail.com" 
+            class="footer-newsletter-label">
+          </input>
             <div class="button-newsletter font-button-newsletter">
               <p>Je m’inscris !</p>
             </div>
           </div>
         </div>
-        <div class="legal">
+        <div class="footer-legal">
           <a
             href="https://www.dargaud.com/mentions-legales"
             target="_blank"
@@ -220,7 +227,7 @@
           </a>
         </div>
       </div>
-      <p class="copyright font-copyright">
+      <p class="footer-copyright font-copyright">
         ©Dargaud 2024 - tous droits réservés
       </p>
     </div>
