--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
       href="https://fonts.cdnfonts.com/css/creato-display"
       rel="stylesheet"
     />
-
+    <title>Furieuse</title>
+    <link rel="icon" href="img/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="scss/main.scss" />
   </head>
   <body>
@@ -115,7 +116,7 @@
                 créateurs
               </p>
             </nav>
-            <p class="shop-paragraphe font-text">
+            <p class="shop-paragraphe shop-paragraphe-resume font-text">
               Après « Le Mystère du monde quantique » et « Sous Terre », Mathieu
               Burniat revient avec « Furieuse », une pure fiction scénarisée par
               Geoffroy Monde (« Poussière », « Comment réussir » et « De rien
@@ -133,7 +134,7 @@
               princesse qui n'a connu que la vie de palais. Et les intentions de
               l'épée sont peut-être moins nobles qu'il n'y paraît...
             </p>
-            <p class="shop-paragraphe shop-hide font-text">
+            <p class="shop-paragraphe shop-paragraphe-createurs shop-hide font-text">
               Furieuse est une bande dessinée créée par Geoffroy Monde au
               scénario et Mathieu Burniat au dessin. Geoffroy Monde, auteur
               lyonnais, est influencé par des figures comme Goossens et Gotlib.
