--- a/src/index.html
+++ b/src/index.html
@@ -8,23 +8,23 @@
       rel="stylesheet"
     />
     <title>Furieuse</title>
-    <link rel="icon" href="img/icon.png" type="image/x-icon">
+    <link rel="icon" href="img/icon.webp" type="image/x-icon">
     <link rel="stylesheet" href="scss/main.scss" />
   </head>
   <body>
     <div class="loading">
       <div class="loading-img">
-          <img src="img/loading.f3812557.gif">
+          <img src="img/loading.webp">
       </div>
       <p class="font-newsletter-title">Chargement...</p>
     </div>
     <div class="content">
         <header class="l-header">
         <div class="header-background">
-          <img src="img/titre/titre-plan_1.png" alt="" class="panel panel1" />
-          <img src="img/titre/titre-plan_2.png" alt="" class="panel panel2" />
-          <img src="img/titre/titre-plan_3.png" alt="" class="panel panel3" />
-          <img src="img/titre/titre-plan_4.png" alt="" class="panel panel4" />
+          <img src="img/titre/titre-plan_1.webp" alt="" class="panel panel1" />
+          <img src="img/titre/titre-plan_2.webp" alt="" class="panel panel2" />
+          <img src="img/titre/titre-plan_3.webp" alt="" class="panel panel3" />
+          <img src="img/titre/titre-plan_4.webp" alt="" class="panel panel4" />
         </div>
         <div class="header-content">
           <h1>
@@ -49,68 +49,68 @@
       </header>
       <div class="storytelling l-storytelling" id="storytelling">
         <div class="scene scene1">
-          <img src="img/scene_1/scene_1-plan_1.png" alt="" class="panel panel1" />
-          <img src="img/scene_1/scene_1-plan_2.png" alt="" class="panel panel2" />
-          <img src="img/scene_1/scene_1-plan_3.png" alt="" class="panel panel3" />
-          <img src="img/scene_1/scene_1-plan_4.png" alt="" class="panel panel4" />
+          <img src="img/scene_1/scene_1-plan_1.webp" alt="" class="panel panel1" />
+          <img src="img/scene_1/scene_1-plan_2.webp" alt="" class="panel panel2" />
+          <img src="img/scene_1/scene_1-plan_3.webp" alt="" class="panel panel3" />
+          <img src="img/scene_1/scene_1-plan_4.webp" alt="" class="panel panel4" />
         </div>
         <div class="scene scene2">
-          <img src="img/scene_2/scene_2-plan_1.png" alt="" class="panel panel1" />
-          <img src="img/scene_2/scene_2-plan_2.png" alt="" class="panel panel2" />
-          <img src="img/scene_2/scene_2-plan_3.png" alt="" class="panel panel3" />
-          <img src="img/scene_2/scene_2-plan_4.png" alt="" class="panel panel4" />
-          <img src="img/scene_2/scene_2-plan_5.png" alt="" class="panel panel5" />
+          <img src="img/scene_2/scene_2-plan_1.webp" alt="" class="panel panel1" />
+          <img src="img/scene_2/scene_2-plan_2.webp" alt="" class="panel panel2" />
+          <img src="img/scene_2/scene_2-plan_3.webp" alt="" class="panel panel3" />
+          <img src="img/scene_2/scene_2-plan_4.webp" alt="" class="panel panel4" />
+          <img src="img/scene_2/scene_2-plan_5.webp" alt="" class="panel panel5" />
         </div>
         <div class="scene scene3">
-          <img src="img/scene_3/scene_3-plan_1.png" alt="" class="panel panel1" />
-          <img src="img/scene_3/scene_3-plan_2.png" alt="" class="panel panel2" />
-          <img src="img/scene_3/scene_3-plan_3.png" alt="" class="panel panel3" />
-          <img src="img/scene_3/scene_3-plan_4.png" alt="" class="panel panel4" />
-          <img src="img/scene_3/scene_3-plan_5.png" alt="" class="panel panel5" />
+          <img src="img/scene_3/scene_3-plan_1.webp" alt="" class="panel panel1" />
+          <img src="img/scene_3/scene_3-plan_2.webp" alt="" class="panel panel2" />
+          <img src="img/scene_3/scene_3-plan_3.webp" alt="" class="panel panel3" />
+          <img src="img/scene_3/scene_3-plan_4.webp" alt="" class="panel panel4" />
+          <img src="img/scene_3/scene_3-plan_5.webp" alt="" class="panel panel5" />
         </div>
         <div class="scene scene4">
-          <img src="img/scene_4/scene_4-plan_1.png" alt="" class="panel panel1" />
-          <img src="img/scene_4/scene_4-plan_2.png" alt="" class="panel panel2" />
-          <img src="img/scene_4/scene_4-plan_3.png" alt="" class="panel panel3" />
-          <img src="img/scene_4/scene_4-plan_4.png" alt="" class="panel panel4" />
+          <img src="img/scene_4/scene_4-plan_1.webp" alt="" class="panel panel1" />
+          <img src="img/scene_4/scene_4-plan_2.webp" alt="" class="panel panel2" />
+          <img src="img/scene_4/scene_4-plan_3.webp" alt="" class="panel panel3" />
+          <img src="img/scene_4/scene_4-plan_4.webp" alt="" class="panel panel4" />
         </div>
         <div class="scene scene5">
-          <img src="img/scene_5/scene_5-plan_1.png" alt="" class="panel panel1" />
-          <img src="img/scene_5/scene_5-plan_2.png" alt="" class="panel panel2" />
-          <img src="img/scene_5/scene_5-plan_3.png" alt="" class="panel panel3" />
-          <img src="img/scene_5/scene_5-plan_4.png" alt="" class="panel panel4" />
+          <img src="img/scene_5/scene_5-plan_1.webp" alt="" class="panel panel1" />
+          <img src="img/scene_5/scene_5-plan_2.webp" alt="" class="panel panel2" />
+          <img src="img/scene_5/scene_5-plan_3.webp" alt="" class="panel panel3" />
+          <img src="img/scene_5/scene_5-plan_4.webp" alt="" class="panel panel4" />
         </div>
         <div class="scene scene6">
-          <img src="img/scene_6/scene_6-plan_1.png" alt="" class="panel panel1" />
-          <img src="img/scene_6/scene_6-plan_2.png" alt="" class="panel panel2" />
-          <img src="img/scene_6/scene_6-plan_3.png" alt="" class="panel panel3" />
-          <img src="img/scene_6/scene_6-plan_4.png" alt="" class="panel panel4" />
-          <img src="img/scene_6/scene_6-plan_5.png" alt="" class="panel panel5" />
+          <img src="img/scene_6/scene_6-plan_1.webp" alt="" class="panel panel1" />
+          <img src="img/scene_6/scene_6-plan_2.webp" alt="" class="panel panel2" />
+          <img src="img/scene_6/scene_6-plan_3.webp" alt="" class="panel panel3" />
+          <img src="img/scene_6/scene_6-plan_4.webp" alt="" class="panel panel4" />
+          <img src="img/scene_6/scene_6-plan_5.webp" alt="" class="panel panel5" />
         </div>
         <div class="scene scene7">
-          <img src="img/scene_7/scene_7-plan_1.png" alt="" class="panel panel1" />
-          <img src="img/scene_7/scene_7-plan_2.png" alt="" class="panel panel2" />
-          <img src="img/scene_7/scene_7-plan_3.png" alt="" class="panel panel3" />
-          <img src="img/scene_7/scene_7-plan_4.png" alt="" class="panel panel4" />
-          <img src="img/scene_7/scene_7-plan_5.png" alt="" class="panel panel5" />
+          <img src="img/scene_7/scene_7-plan_1.webp" alt="" class="panel panel1" />
+          <img src="img/scene_7/scene_7-plan_2.webp" alt="" class="panel panel2" />
+          <img src="img/scene_7/scene_7-plan_3.webp" alt="" class="panel panel3" />
+          <img src="img/scene_7/scene_7-plan_4.webp" alt="" class="panel panel4" />
+          <img src="img/scene_7/scene_7-plan_5.webp" alt="" class="panel panel5" />
         </div>
         <div class="scene scene8">
-          <img src="img/scene_8/scene_8-plan_1.png" alt="" class="panel panel1" />
-          <img src="img/scene_8/scene_8-plan_2.png" alt="" class="panel panel2" />
-          <img src="img/scene_8/scene_8-plan_3.png" alt="" class="panel panel3" />
-          <img src="img/scene_8/scene_8-plan_4.png" alt="" class="panel panel4" />
-          <img src="img/scene_8/scene_8-plan_5.png" alt="" class="panel panel5" />
+          <img src="img/scene_8/scene_8-plan_1.webp" alt="" class="panel panel1" />
+          <img src="img/scene_8/scene_8-plan_2.webp" alt="" class="panel panel2" />
+          <img src="img/scene_8/scene_8-plan_3.webp" alt="" class="panel panel3" />
+          <img src="img/scene_8/scene_8-plan_4.webp" alt="" class="panel panel4" />
+          <img src="img/scene_8/scene_8-plan_5.webp" alt="" class="panel panel5" />
         </div>
         <div class="scene scene9">
-          <img src="img/scene_9/scene_9-plan_1.png" alt="" class="panel panel1" />
-          <img src="img/scene_9/scene_9-plan_3.png" alt="" class="panel panel3" />
-          <img src="img/scene_9/scene_9-plan_4.png" alt="" class="panel panel4" />
-          <img src="img/scene_9/scene_9-plan_2.png" alt="" class="panel panel2" />
-          <img src="img/scene_9/scene_9-plan_5.png" alt="" class="panel panel5" />
+          <img src="img/scene_9/scene_9-plan_1.webp" alt="" class="panel panel1" />
+          <img src="img/scene_9/scene_9-plan_3.webp" alt="" class="panel panel3" />
+          <img src="img/scene_9/scene_9-plan_4.webp" alt="" class="panel panel4" />
+          <img src="img/scene_9/scene_9-plan_2.webp" alt="" class="panel panel2" />
+          <img src="img/scene_9/scene_9-plan_5.webp" alt="" class="panel panel5" />
         </div>
       </div>
       <div class="l-shop" id="shop">
-        <img src="img/shop-background.jpg" alt="" class="shop-background" />
+        <img src="img/shop-background.webp" alt="" class="shop-background" />
         <div class="shop">
           <img src="img/mockup.webp" alt="" class="shop-mockup" />
           <div class="shop-info">
@@ -170,7 +170,7 @@
         <div class="footer-content">
           <div class="footer-dargaud">
             <img
-              src="img/logo-dargaud-blanc.png"
+              src="img/logo-dargaud-blanc.webp"
               alt=""
               class="footer-logo-dargaud"
             />
