--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.cdnfonts.com/css/creato-display"
-      rel="stylesheet"
-    />
+    <!-- Balises Open Graph -->
+    <meta property="og:title" content="Furieuse">
+    <meta property="og:description" content="Viens découvrir l'aventure incroyable d'Ysa !">
+    <meta property="og:image" content="img/open-graph.webp">
+    <!-- Info de la page -->
     <title>Furieuse</title>
     <link rel="icon" href="img/icon.webp" type="image/x-icon">
+    <meta name="description" content="Viens découvrir l'aventure incroyable d'Ysa !">
+    <!-- Liens externes -->
+    <link
+    href="https://fonts.cdnfonts.com/css/creato-display"
+    rel="stylesheet"
+  />
     <link rel="stylesheet" href="scss/main.scss" />
   </head>
   <body>
@@ -21,7 +28,7 @@
     </div>
     <!-- Contenu de la page -->
     <div class="content">
-      <!-- Introducction du site et titre -->
+      <!-- Introduction du site et titre -->
       <header class="l-header">
         <div class="header-background">
           <img src="img/titre/titre-plan_1.webp" alt="" class="panel panel1" />
